# Detours

./: .gitignore  CMakeLists.txt
cmake/: detours-config.cmake
